--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -9,13 +9,13 @@
     #container
       %form
         %label{:for => "username"} Username:
-        %input#username{:name => "username", :type => "text"}/
+        %input#username{:name => "username", :type => "text"}
         %label{:for => "password"} Password:
-        %input#password{:name => "password", :type => "password"}/
+        %input#password{:name => "password", :type => "password"}
       #lower
         %p#signup
           New User?
-        %a{:href => "sign-up.haml"} Sign Up!
-        %input#login{:type => "submit", :value => "Login"}/
-    %script(src='lib/js/vendor.min.js')
-    %script(src='lib/js/app.js'
+          %a{:href => "sign-up.haml"} Sign Up!
+        %input#login{:type => "submit", :value => "Login"}
+  %script(src='lib/js/vendor.min.js')
+  %script(src='lib/js/app.js')
