--- a/app/views/layouts/sign-up.haml
+++ b/app/views/layouts/sign-up.haml
@@ -9,16 +9,16 @@
     #container
       %form
         %label{:for => "first-name"} First Name:
-        %input#first-name{:name => "first-name", :type => "text"}/
+        %input#first-name{:name => "first-name", :type => "text"}
         %label{:for => "last-name"} Last Name:
-        %input#last-name{:name => "last-name", :type => "text"}/
+        %input#last-name{:name => "last-name", :type => "text"}
         %label{:for => "username"} Username:
-        %input#username{:name => "username", :type => "text"}/
+        %input#username{:name => "username", :type => "text"}
         %label{:for => "password"} Password:
-        %input#password{:name => "password", :type => "password"}/
+        %input#password{:name => "password", :type => "password"}
         %label{:for => "confirm"}  Confirm Password:
-        %input#password{:name => "confirm", :type => "password"}/
-     #lower
-        %input{:type => "submit", :value => "Start Guessin'!"}/
-    %script(src='lib/js/vendor.min.js')
-    %script(src='lib/js/app.js')
+        %input#password{:name => "confirm", :type => "password"}
+      #lower
+        %input{:type => "submit", :value => "Start Guessin'!"}
+  %script(src='lib/js/vendor.min.js')
+  %script(src='lib/js/app.js')
