added registration & game html pages

--- a/app/views/layouts/registration.haml
+++ b/app/views/layouts/registration.haml
@@ -6,5 +6,8 @@
     %title Vikings in Haml
     %link(rel='stylsheet' href='lib/styles/main.min.css')
   %body
-
-  
+    .container
+      %header
+        %nav
+      .form-container
+        %form
