--- a/app/views/layouts/registration.html
+++ b/app/views/layouts/registration.html
@@ -6,5 +6,14 @@
     <title>Vikings in Haml</title>
     <link href='lib/styles/main.min.css' rel='stylsheet'>
   </head>
-  <body></body>
+  <body>
+    <div class='container'>
+      <header>
+        <nav></nav>
+      </header>
+      <div class='form-container'>
+        <form></form>
+      </div>
+    </div>
+  </body>
 </html>
