--- a/app/views/layouts/index-haml.html
+++ b/app/views/layouts/index-haml.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='UTF-8'>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
-    <title>Guess Who!</title>
+    <title>Mr. Potato Who?</title>
     <link href='lib/styles/main.min.css' rel='stylesheet'>
   </head>
   <body>
