--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -3,7 +3,7 @@
   %head
     %meta(charset='UTF-8')
     %meta(content='width=device-width, initial-scale=1' name='viewport')
-    %title Guess Who!
+    %title Mr. Potato Who?
     %link(rel='stylesheet' href='lib/styles/main.min.css')
   %body
     #container
