--- a/app/views/layouts/registration.html
+++ b/app/views/layouts/registration.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='UTF-8'>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
-    <title>Vikings in Haml</title>
+    <title>Mr. Potato Who?</title>
     <link href='lib/styles/main.min.css' rel='stylsheet'>
   </head>
   <body>
@@ -12,7 +12,14 @@
         <nav></nav>
       </header>
       <div class='form-container'>
-        <form></form>
+        <form>
+          <label for='username'>Username:</label>
+          <input id='username' name='username' type='text'>
+          <label for='password'>Create Password:</label>
+          <input id='password' name='password' type='password'>
+          <label for='password'>Re-enter Password:</label>
+          <input id='password' name='password' type='password'>
+        </form>
       </div>
     </div>
   </body>
