--- a/src/styles/partials/setup/_variables.scss
+++ b/src/styles/partials/setup/_variables.scss
@@ -1,9 +1,7 @@
 $vspace: 15px;
 $hspace: 10px;
 
-$tuatara: #373734;
-$geyser: #D2DCDD;
-$breaker: #6699AA;
-
-$raleway: 'Raleway', sans-serif;
-$lato: 'Lato', sans-serif;
+$brown: #a6633c;
+$red: #FCB3D6;
+$blue: #204471;
+$black: #000000;
