--- a/app/views/layouts/registration.html
+++ b/app/views/layouts/registration.html
@@ -13,12 +13,30 @@
       </header>
       <div class='form-container'>
         <form>
+          <label for='firstName'>First Name:</label>
+          <input id='firstName' name='firstName' type='text'>
+          <label for='lastName'>Last Name:</label>
+          <input id='lastName' name='lastName' type='text'>
           <label for='username'>Username:</label>
           <input id='username' name='username' type='text'>
           <label for='password'>Create Password:</label>
           <input id='password' name='password' type='password'>
           <label for='password'>Re-enter Password:</label>
           <input id='password' name='password' type='password'>
+          <select>
+            <option>
+              <img alt='one.svg' src='../../../images/one.svg'>
+            </option>
+            <option>
+              <img alt='one.svg' src='../../../images/two.svg'>
+            </option>
+            <option>
+              <img alt='one.svg' src='../../../images/three.svg'>
+            </option>
+            <option>
+              <img alt='one.svg' src='../../../images/four.svg'>
+            </option>
+          </select>
         </form>
       </div>
     </div>
