--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,2 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+@import url("https://fonts.googleapis.com/css?family=Lato|Raleway");html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}body{height:100vh;line-height:1;width:100vw}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}*,*:before,*:after{box-sizing:border-box}.lato{font-family:'Lato', sans-serif}.raleway{font-family:'Raleway', sans-serif}p{color:#444;font:18px/24px Raleway,sans-serif;margin:15px 0}h2{border-bottom:1px solid #69a;display:block;font:32px/40px Lato,sans-serif;margin-bottom:15px;padding:15px 10px;text-transform:uppercase;width:90%}section{align-items:center;display:flex;flex-direction:column;justify-content:center;min-height:100vh;width:100vw}section p{width:75%}.props-container{padding:10px 20px;overflow:hidden}.props-container .prop{float:left;width:33%;text-align:center}.props-container .prop img{width:150px}
+/*# sourceMappingURL=application.css.map */
