--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,13 @@
 /****** Vendor Imports ******/
 @import 'partials/vendor/bourbon/bourbon';
 
+
 /********** Setup ***********/
 @import 'partials/setup/variables';
 @import 'partials/setup/reset';
 @import 'partials/setup/fonts';
 @import 'partials/setup/general';
+
+/********** Partials ***********/
+@import 'partials/animation';
+@import 'partials/props-container';
