--- a/app/views/layouts/dev.html
+++ b/app/views/layouts/dev.html
@@ -4,7 +4,7 @@
     <meta charset='UTF-8'>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
     <title>Mr. Potato Who?</title>
-    <link href='lib/styles/main.min.css' rel='stylesheet'>
+    <link href='/lib/styles/main.min.css' rel='stylesheet'>
   </head>
   <body></body>
   <div id='container'>
@@ -16,19 +16,19 @@
     </div>
     <div id='features'>
       <div id='hat'>
-        <img src='images/hat.svg'>
+        <img id='fedora' src='/images/hat.svg'>
       </div>
       <div id='glasses'>
-        <img src='images/glasses-for-eyes.svg'>
+        <img id='horn-glasses' src='/images/glasses-for-eyes.svg'>
       </div>
       <div id='stash'>
-        <img src='images/mustache.svg'>
+        <img id='stash' src='/images/mustache.svg'>
       </div>
       <div id='bowtie'>
-        <img src='images/shape.svg'>
+        <img id='big-glasses' src='/images/shape.svg'>
       </div>
     </div>
   </div>
-  <script src='lib/js/vendor.min.js'></script>
-  <script src='lib/js/app.js'></script>
+  <script src='/lib/js/vendor.min.js'></script>
+  <script src='/lib/js/app.js'></script>
 </html>
