--- a/app/views/layouts/dev.haml
+++ b/app/views/layouts/dev.haml
@@ -4,7 +4,7 @@
     %meta(charset='UTF-8')
     %meta(content='width=device-width, initial-scale=1' name='viewport')
     %title Mr. Potato Who?
-    %link(rel='stylesheet' href='lib/styles/main.min.css')
+    %link(rel='stylesheet' href='/lib/styles/main.min.css')
   %body
   #container
     #potato-container
@@ -14,17 +14,17 @@
       #four
     #features
       #hat
-        %img(src="images/hat.svg")
+        %img(src="/images/hat.svg" id="fedora")
       #glasses
-        %img(src="images/glasses-for-eyes.svg")
+        %img(src="/images/glasses-for-eyes.svg" id="horn-glasses")
       #stash
-        %img(src="images/mustache.svg")
+        %img(src="/images/mustache.svg" id="stash")
       #bowtie
-        %img(src="images/shape.svg")
+        %img(src="/images/shape.svg" id="big-glasses")
 
 
 
 
 
-  %script(src='lib/js/vendor.min.js')
-  %script(src='lib/js/app.js')
+  %script(src='/lib/js/vendor.min.js')
+  %script(src='/lib/js/app.js')
