--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,16 +6,4 @@
 @import 'partials/setup/reset';
 @import 'partials/setup/fonts';
 @import 'partials/setup/general';
-
-#container {
-  background-image: url("/images/wavegrid_@2x.png");
-  width: 100%;
-  height: 800px;
-}
-
-potato-container {
-  margin: 0 auto;
-  height: 300px;
-  width: 30%;
-  border: 1px solid black;
-}
+@import 'partials/test'
