--- a/app/views/layouts/registration.haml
+++ b/app/views/layouts/registration.haml
@@ -33,3 +33,5 @@
             - (profilePic).each do |pic|
               %option
                 %img(src='../../../images/#{pic[:img]}' alt='#{pic[:name]}')
+  %script(src='/app/assets/javascripts/vendor.min.js')
+  %script(src='/app/assets/javascripts/app.js')
