--- a/app/views/layouts/index-haml.html
+++ b/app/views/layouts/index-haml.html
@@ -23,6 +23,6 @@
       </div>
     </div>
   </body>
-  <script src='lib/js/vendor.min.js'></script>
-  <script src='lib/js/app.js'></script>
+  <script src='/app/assets/javascripts/vendor.min.js'></script>
+  <script src='/app/assets/javascripts/app.js'></script>
 </html>
