--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -17,5 +17,5 @@
           New User?
           %a{:href => "sign-up.haml"} Sign Up!
         %input#login{:type => "submit", :value => "Login"}
-  %script(src='lib/js/vendor.min.js')
-  %script(src='lib/js/app.js')
+  %script(src='/app/assets/javascripts/vendor.min.js')
+  %script(src='/app/assets/javascripts/app.js')
