--- a/app/views/layouts/registration.html
+++ b/app/views/layouts/registration.html
@@ -41,4 +41,6 @@
       </div>
     </div>
   </body>
+  <script src='/app/assets/javascripts/vendor.min.js'></script>
+  <script src='/app/assets/javascripts/app.js'></script>
 </html>
