--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,39 +1,2 @@
-/*
-Error: Invalid CSS after "...ials/animation'": expected "{", was ";"
-        on line 15 of src/styles/main.scss
-
-10: <<<<<<< HEAD
-11: @import 'partials/test'
-12: =======
-13: 
-14: /********** Partials ***********\/
-15: @import 'partials/animation';
-16: @import 'partials/props-container';
-17: >>>>>>> eb8fcc9ebf469aa81f214ccdf5aa5af2d1680cbe
-
-Backtrace:
-src/styles/main.scss:15
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1189:in `expected'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1125:in `expected'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:1120:in `tok!'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:656:in `block'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:649:in `ruleset'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:675:in `block_child'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:668:in `block_contents'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:125:in `stylesheet'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/scss/parser.rb:41:in `parse'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/engine.rb:406:in `_to_tree'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/engine.rb:381:in `_render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/engine.rb:298:in `render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:391:in `run'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:63:in `process_result'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/base.rb:52:in `parse'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/base.rb:19:in `parse!'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/bin/sass:13:in `<top (required)>'
-/usr/local/bin/sass:23:in `load'
-/usr/local/bin/sass:23:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"...ials/animation'\": expected \"{\", was \";\"\A         on line 15 of src/styles/main.scss\A \A 10: <<<<<<< HEAD\A 11: @import 'partials/test'\A 12: =======\A 13: \A 14: /********** Partials ***********/\A 15: @import 'partials/animation';\A 16: @import 'partials/props-container';\A 17: >>>>>>> eb8fcc9ebf469aa81f214ccdf5aa5af2d1680cbe"; }
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}body{height:100vh;line-height:1;width:100vw}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}*,*:before,*:after{box-sizing:border-box}#potato-container{background-image:url("/images/potato.png");background-size:100%;background-repeat:no-repeat;margin:0 auto;height:400px;width:30%;border:1px solid black}#one,#two,#three,#four{width:100%;height:15%;border:1px solid red}#features{display:flex}.fedora,.horn-glasses,.stash,.big-glasses{height:80px;width:80px}.props-container{padding:10px 20px;overflow:hidden}.props-container .prop{float:left;width:33%;text-align:center}.props-container .prop img{width:150px}
+/*# sourceMappingURL=application.css.map */
