--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,11 +7,8 @@
 @import 'partials/setup/reset';
 @import 'partials/setup/fonts';
 @import 'partials/setup/general';
-<<<<<<< HEAD
-@import 'partials/test'
-=======
+@import 'partials/test';
 
 /********** Partials ***********/
 @import 'partials/animation';
 @import 'partials/props-container';
->>>>>>> eb8fcc9ebf469aa81f214ccdf5aa5af2d1680cbe
