added styling to game.ham page & moved images to new folder

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,4 +10,9 @@
 
 /********** Partials ***********/
 @import 'partials/animation';
+@import 'partials/container';
+@import 'partials/nav';
 @import 'partials/props-container';
+@import 'partials/potato-people';
+@import 'partials/main';
+@import 'partials/score';
