--- a/src/styles/partials/setup/_fonts.scss
+++ b/src/styles/partials/setup/_fonts.scss
@@ -1,8 +1,1 @@
-@import url( 'https://fonts.googleapis.com/css?family=Lato|Raleway');
-
-.lato {
-    font-family: 'Lato', sans-serif;
-}
-.raleway {
-    font-family: 'Raleway', sans-serif;
-}
+//@import url( '<link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Luckiest+Guy" rel="stylesheet">');
