--- a/src/styles/partials/_props-container.scss
+++ b/src/styles/partials/_props-container.scss
@@ -1,14 +1,18 @@
 .props-container {
   padding: 10px 20px;
   overflow: hidden;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  background: #fff;
 
   .prop {
     float: left;
-    width: 33%;
+    width: 16%;
     text-align: center;
 
     img {
-      width: 150px;
+      width: 90px;
     }
   }
 }
