--- a/app/views/layouts/dev.html
+++ b/app/views/layouts/dev.html
@@ -4,7 +4,7 @@
     <meta charset='UTF-8'>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
     <title>Mr. Potato Who?</title>
-    <link href='/lib/styles/main.min.css' rel='stylesheet'>
+    <link href='/app/assets/stylesheets/application.css' rel='stylesheet'>
   </head>
   <body></body>
   <div id='container'>
@@ -15,20 +15,22 @@
       <div id='four'></div>
     </div>
     <div id='features'>
-      <div id='hat'>
-        <img id='fedora' src='/images/hat.svg'>
+      <div class='items'>
+        <img class='fedora' src='/images/hat.svg'>
       </div>
-      <div id='glasses'>
-        <img id='horn-glasses' src='/images/glasses-for-eyes.svg'>
+      <div class='items'>
+        <img class='horn-glasses' src='/images/glasses-for-eyes.svg'>
       </div>
-      <div id='stash'>
-        <img id='stash' src='/images/mustache.svg'>
+      <div class='items'>
+        <img class='stash' src='/images/mustache.svg'>
       </div>
-      <div id='bowtie'>
-        <img id='big-glasses' src='/images/shape.svg'>
+      <div class='items'>
+        <img class='big-glasses' src='/images/shape.svg'>
       </div>
     </div>
   </div>
-  <script src='/lib/js/vendor.min.js'></script>
-  <script src='/lib/js/app.js'></script>
+  <script src='/app/assets/javascripts/vendor.min.js'></script>
+  <script src='/app/assets/javascripts/dev.js'></script>
+  <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js' type='text/javascript'></script>
+  <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js' type='text/javascript'></script>
 </html>
