--- a/app/views/layouts/dev.haml
+++ b/app/views/layouts/dev.haml
@@ -4,7 +4,7 @@
     %meta(charset='UTF-8')
     %meta(content='width=device-width, initial-scale=1' name='viewport')
     %title Mr. Potato Who?
-    %link(rel='stylesheet' href='/lib/styles/main.min.css')
+    %link(rel='stylesheet' href='/app/assets/stylesheets/application.css')
   %body
   #container
     #potato-container
@@ -13,18 +13,20 @@
       #three
       #four
     #features
-      #hat
-        %img(src="/images/hat.svg" id="fedora")
-      #glasses
-        %img(src="/images/glasses-for-eyes.svg" id="horn-glasses")
-      #stash
-        %img(src="/images/mustache.svg" id="stash")
-      #bowtie
-        %img(src="/images/shape.svg" id="big-glasses")
+      .items
+        %img(src="/images/hat.svg" class="fedora")
+      .items
+        %img(src="/images/glasses-for-eyes.svg" class="horn-glasses")
+      .items
+        %img(src="/images/mustache.svg" class="stash")
+      .items
+        %img(src="/images/shape.svg" class="big-glasses")
 
 
 
 
 
-  %script(src='/lib/js/vendor.min.js')
-  %script(src='/lib/js/app.js')
+  %script(src='/app/assets/javascripts/vendor.min.js')
+  %script(src='/app/assets/javascripts/dev.js')
+  %script(type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js")
+  %script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js")
