--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -4,18 +4,17 @@
     %meta(charset='UTF-8')
     %meta(content='width=device-width, initial-scale=1' name='viewport')
     %title Mr. Potato Who?
-    %link(rel='stylesheet' href='lib/styles/main.min.css')
+    %link(rel='stylesheet' href='/app/assets/stylesheets/application.css')
   %body
     #container
-      %form
+      %form(action="post")
         %label{:for => "username"} Username:
         %input#username{:name => "username", :type => "text"}
         %label{:for => "password"} Password:
         %input#password{:name => "password", :type => "password"}
-      #lower
         %p#signup
           New User?
-          %a{:href => "sign-up.haml"} Sign Up!
+          %a{:href => "signup.haml"} Sign Up!
         %input#login{:type => "submit", :value => "Login"}
   %script(src='/app/assets/javascripts/vendor.min.js')
   %script(src='/app/assets/javascripts/app.js')
