--- a/app/views/layouts/signup.haml
+++ b/app/views/layouts/signup.haml
@@ -4,7 +4,7 @@
     %meta(charset='UTF-8')
     %meta(content='width=device-width, initial-scale=1' name='viewport')
     %title Mr. Potato Who?
-    %link(rel='stylesheet' href='lib/styles/main.min.css')
+    %link(rel='stylesheet' href='/app/assets/stylesheets/application.css')
   %body
     #container
       %form
