--- a/src/styles/partials/_test.scss
+++ b/src/styles/partials/_test.scss
@@ -1,3 +1,10 @@
+#container {
+  background-image: url('/images/wavegrid_@2x.png');
+  width: 100%;
+  height: 100%;
+}
+
+
 #potato-container {
   background-image: url("/images/potato.png");
   background-size: 100%;
