- added leaderboard page - added css to leaderboard page & game page

--- a/app/views/layouts/game.html
+++ b/app/views/layouts/game.html
@@ -37,12 +37,48 @@
             </div>
           </div>
           <div class='person-container'>
-            <h3>Baked Ben</h3>
+            <h3>Tator Tom</h3>
             <div class='props'>
-              <img alt='Baked Ben' src='/app/assets/images/hat.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/mustache.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/glasses.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/bow-tie.svg'>
+              <img alt='Tator Tom' src='/app/assets/images/hat.svg'>
+              <img alt='Tator Tom' src='/app/assets/images/mustache.svg'>
+              <img alt='Tator Tom' src='/app/assets/images/glasses.svg'>
+              <img alt='Tator Tom' src='/app/assets/images/bow-tie.svg'>
+            </div>
+          </div>
+          <div class='person-container'>
+            <h3>Brotato</h3>
+            <div class='props'>
+              <img alt='Brotato' src='/app/assets/images/hat.svg'>
+              <img alt='Brotato' src='/app/assets/images/mustache.svg'>
+              <img alt='Brotato' src='/app/assets/images/glasses.svg'>
+              <img alt='Brotato' src='/app/assets/images/bow-tie.svg'>
+            </div>
+          </div>
+          <div class='person-container'>
+            <h3>Mike Mash</h3>
+            <div class='props'>
+              <img alt='Mike Mash' src='/app/assets/images/hat.svg'>
+              <img alt='Mike Mash' src='/app/assets/images/mustache.svg'>
+              <img alt='Mike Mash' src='/app/assets/images/glasses.svg'>
+              <img alt='Mike Mash' src='/app/assets/images/bow-tie.svg'>
+            </div>
+          </div>
+          <div class='person-container'>
+            <h3>Nancy Yam</h3>
+            <div class='props'>
+              <img alt='Nancy Yam' src='/app/assets/images/hat.svg'>
+              <img alt='Nancy Yam' src='/app/assets/images/mustache.svg'>
+              <img alt='Nancy Yam' src='/app/assets/images/glasses.svg'>
+              <img alt='Nancy Yam' src='/app/assets/images/bow-tie.svg'>
+            </div>
+          </div>
+          <div class='person-container'>
+            <h3>Mertato</h3>
+            <div class='props'>
+              <img alt='Mertato' src='/app/assets/images/hat.svg'>
+              <img alt='Mertato' src='/app/assets/images/mustache.svg'>
+              <img alt='Mertato' src='/app/assets/images/glasses.svg'>
+              <img alt='Mertato' src='/app/assets/images/bow-tie.svg'>
             </div>
           </div>
           <div class='person-container'>
@@ -55,48 +91,12 @@
             </div>
           </div>
           <div class='person-container'>
-            <h3>Baked Ben</h3>
+            <h3>Popo</h3>
             <div class='props'>
-              <img alt='Baked Ben' src='/app/assets/images/hat.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/mustache.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/glasses.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/bow-tie.svg'>
-            </div>
-          </div>
-          <div class='person-container'>
-            <h3>Baked Ben</h3>
-            <div class='props'>
-              <img alt='Baked Ben' src='/app/assets/images/hat.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/mustache.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/glasses.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/bow-tie.svg'>
-            </div>
-          </div>
-          <div class='person-container'>
-            <h3>Baked Ben</h3>
-            <div class='props'>
-              <img alt='Baked Ben' src='/app/assets/images/hat.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/mustache.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/glasses.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/bow-tie.svg'>
-            </div>
-          </div>
-          <div class='person-container'>
-            <h3>Baked Ben</h3>
-            <div class='props'>
-              <img alt='Baked Ben' src='/app/assets/images/hat.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/mustache.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/glasses.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/bow-tie.svg'>
-            </div>
-          </div>
-          <div class='person-container'>
-            <h3>Baked Ben</h3>
-            <div class='props'>
-              <img alt='Baked Ben' src='/app/assets/images/hat.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/mustache.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/glasses.svg'>
-              <img alt='Baked Ben' src='/app/assets/images/bow-tie.svg'>
+              <img alt='Popo' src='/app/assets/images/hat.svg'>
+              <img alt='Popo' src='/app/assets/images/mustache.svg'>
+              <img alt='Popo' src='/app/assets/images/glasses.svg'>
+              <img alt='Popo' src='/app/assets/images/bow-tie.svg'>
             </div>
           </div>
           <div class='person-container'>
@@ -119,11 +119,25 @@
           </div>
         </div>
       </aside>
-      <aside class='score'></aside>
+      <aside class='score'>
+        <div class='try-container'>
+          <h3>Try 1</h3>
+        </div>
+        <div class='try-container'>
+          <h3>Try 2</h3>
+        </div>
+        <div class='try-container'>
+          <h3>Try 3</h3>
+        </div>
+      </aside>
       <main class='board'>
         <h1>Mr. Potato Who?</h1>
         <div class='potatoBoard'>
-          <img alt='potato-board' src='/app/assets/images/potato.png'>
+          <div class='bodyFeatures'>
+            <img alt='potato-eyes' class='eyes' src='/app/assets/images/eyes.svg'>
+            <img alt='potato-nose' class='nose' src='/app/assets/images/big-nose.svg'>
+          </div>
+          <img alt='potato-board' class='board' src='/app/assets/images/potato.png'>
         </div>
       </main>
       <div class='props-container'>
