--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,5 +14,6 @@
 @import 'partials/nav';
 @import 'partials/props-container';
 @import 'partials/potato-people';
-@import 'partials/main';
+@import 'partials/board';
 @import 'partials/score';
+@import 'partials/leadership-board';
