--- a/src/styles/partials/_score.scss
+++ b/src/styles/partials/_score.scss
@@ -1,6 +1,21 @@
 .score {
   width: 190px;
-  background: #eee;
+  background: #204471;
   float: right;
-  height: 400px;
+  height: 450px;
+  margin-top: 20px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+
+  .try-container {
+    text-align: center;
+    font-size: 30px;
+    font-weight: 300;
+    padding: 50px 0;
+    background: #ddd;
+    border-radius: 50%;
+    width: 135px;
+    margin: 0 auto;
+    margin-top: 15px;
+  }
 }
