--- a/app/views/layouts/leaderboard.html
+++ b/app/views/layouts/leaderboard.html
@@ -16,12 +16,14 @@
             <span>1300</span>
             <div class='points'></div>
           </div>
-          <div class='logo'></div>
           <div class='profile'>
             <div class='picture'>
               <img alt='John' src='/app/assets/images/person.svg'>
             </div>
             <div class='name'>Hey, John</div>
+          </div>
+          <div class='logo'>
+            <img alt='logo' src='/app/assets/images/logo.svg'>
           </div>
         </nav>
       </header>
