--- a/src/styles/partials/_leadership-board.scss
+++ b/src/styles/partials/_leadership-board.scss
@@ -38,6 +38,14 @@
         padding: 15px 0;
         color: #D94032;
       }
+
+      .total {
+        padding-bottom: 10px;
+      }
+
+      span {
+        font-size: 20px;
+      }
     }
   }
 
