--- a/app/views/users/game.haml
+++ b/app/views/users/game.haml
@@ -5,6 +5,7 @@
     %meta(content="width=device-width, initial-scale=1" name="viewport")
     %title Mr. Potato Who?
     %link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Luckiest+Guy')
+    %link(rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.min.css")
     =stylesheet_link_tag 'application.css'
   %body
     - potatoes = [{name: 'Baked Ben', props: ['hat', 'mustache', 'glasses', 'bow-tie']},
@@ -12,11 +13,11 @@
         {name: 'Brotato', props: ['hat', 'mustache', 'glasses', 'bow-tie']},
         {name: 'Mike Mash', props: ['hat', 'mustache', 'glasses', 'bow-tie']},
         {name: 'Nancy Yam', props: ['hat', 'mustache', 'glasses', 'bow-tie']},
-        {name: 'Mertato', props: ['hat', 'mustache', 'glasses', 'bow-tie']},
-        {name: 'Baked Ben', props: ['hat', 'mustache', 'glasses', 'bow-tie']},
-        {name: 'Popo', props: ['hat', 'mustache', 'glasses', 'bow-tie']},
-        {name: 'Baked Ben', props: ['hat', 'mustache', 'glasses', 'bow-tie']},
-        {name: 'Baked Ben', props: ['hat', 'mustache', 'glasses', 'bow-tie']}]
+        {name: 'Darth Tator', props: ['hat', 'mustache', 'glasses', 'bow-tie']},
+        {name: 'Ted Tubor', props: ['hat', 'mustache', 'glasses', 'bow-tie']},
+        {name: 'Spud Lighter', props: ['hat', 'mustache', 'glasses', 'bow-tie']},
+        {name: 'Fran Fry', props: ['hat', 'mustache', 'glasses', 'bow-tie']},
+        {name: 'Potato.', props: ['hat', 'mustache', 'glasses', 'bow-tie']}]
 
     - props = [{prop: 'hat', img: 'hat.svg'}, {prop: 'mustache', img: 'mustache.svg'},
         {prop: 'bow-tie', img: 'bow-tie.svg'}, {prop: 'glasses', img: 'glasses.svg'},
@@ -31,11 +32,13 @@
             .total Total Points:
             %span 1200
             .points
-          .logo
           .profile
             .picture
               %img(src='/assets/person.svg' alt='John')
             .name Hey, John
+            .leaderpage Leader Board?
+          .logo
+            %img(src='/assets/logo.svg' alt='logo')
       %aside.potatoPeople
         .potato-people-container
           - (potatoes).each do |person|
@@ -59,6 +62,8 @@
         .prop-container
           - (props).each do |prop|
             .prop
-              %img(src='/assets/#{prop[:img]}' alt='#{prop[:name]}')
+              %img.drag(src='/assets/#{prop[:img]}' alt='#{prop[:name]}')
+    %script(type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js")
+    %script(type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js")
     =javascript_include_tag 'vendor.min.js'
     =javascript_include_tag 'app.js'
