--- a/src/styles/partials/_container.scss
+++ b/src/styles/partials/_container.scss
@@ -1,6 +1,6 @@
 .container {
   margin: 0 auto;
-  background: url('/app/assets/images/pattern.png');
+  background: url('/assets/pattern.png');
   height: 100%;
   font-family: 'Lato', sans-serif;
   overflow: auto;
