--- a/src/styles/partials/_sign-in.scss
+++ b/src/styles/partials/_sign-in.scss
@@ -1,5 +1,5 @@
 .container {
-  background-image: url('/app/assets/images/pattern.png');
+  background-image: url('/assets/pattern.png');
   width: 100%;
   height: 100%;
 }
